--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,8 @@ docs/_build
 #==============================================================================#
 bindings/go/llvm/llvm_config.go
 bindings/go/llvm/workdir
+
+#==============================================================================#
+# 65816 stuff
+#==============================================================================#
+lib/Target/WDC65816
